# cpp-project-template

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  sample.cpp
src/include/: sample.h
test/: CMakeLists.txt  sample_test.cpp
